--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-hash-link": "^1.2.0",
     "react-router-redux": "^4.0.8",
+    "react-toastify": "^4.1.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "storybook-project": "github:SuperJura/storybook-boilerplate"
